--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "json-server": "^0.17.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-elastic-carousel": "^0.11.5",
     "react-responsive-carousel": "^3.2.22",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
