--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-elastic-carousel": "^0.11.5",
     "react-responsive-carousel": "^3.2.22",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.4",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
